objects/LAT_BR_Further_Suppliers_Detail__c.object
<CustomObject>
    <fields>
        <fullName>LAT_BR_FSD_Associate_Name__c</fullName>
        <label>Associate Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BR_FSD_Associate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Associate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_BR_FSD_Credit_Analisis__c</fullName>
        <label>Credit Analisis</label>
        <referenceTo>Analise_de_credito__c</referenceTo>
        <relationshipLabel>LAT_BR_Further Suppliers Details</relationshipLabel>
        <relationshipName>LAT_BR_Further_Suppliers_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LAT_BR_FSD_Credit_Limit__c</fullName>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LAT_BR_FSD_Current_Debit__c</fullName>
        <label>Current Debit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LAT_BR_FSD_Higher_Accumulation__c</fullName>
        <label>Higher Accumulation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>LAT_BR_Further Suppliers Detail</label>
    <nameField>
        <displayFormat>FSD-{0000}</displayFormat>
        <label>LAT_BR_ Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LAT_BR_Further Suppliers Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>